[gd_scene load_steps=5 format=3 uid="uid://b6gqtiu4t7ln"]

[ext_resource type="Script" path="res://Assets/UI/Game Screen/game_screen.gd" id="1_ldgj6"]
[ext_resource type="FontFile" uid="uid://b2l5jmu8eknaw" path="res://Assets/Font/Fool.ttf" id="2_3tmax"]
[ext_resource type="Texture2D" uid="uid://cdtlc1shid6b6" path="res://Assets/UI/Carved_3Slides.png" id="2_s7qmc"]

[sub_resource type="Theme" id="Theme_fgnht"]
Button/fonts/font = ExtResource("2_3tmax")
Label/colors/font_color = Color(0.39284, 0.324181, 0.273151, 1)
Label/font_sizes/font_size = 24
Label/fonts/font = ExtResource("2_3tmax")

[node name="GameScreen" type="CanvasLayer"]
script = ExtResource("1_ldgj6")

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fgnht")
metadata/_edit_use_anchors_ = true

[node name="NarrationBanner" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/NarrationBanner"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -136.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_s7qmc")
patch_margin_left = 4
patch_margin_top = 6
patch_margin_right = 4
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="MarginContainer/NarrationBanner/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.5
offset_top = -22.5
offset_right = 134.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="NarrationLabel" type="Label" parent="MarginContainer/NarrationBanner/NinePatchRect/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(740, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
horizontal_alignment = 1
autowrap_mode = 3

[node name="KeyDirectionsLabel" type="Label" parent="MarginContainer/NarrationBanner/NinePatchRect/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 8
